--- a/content/_data/publication.yaml
+++ b/content/_data/publication.yaml
@@ -9,7 +9,7 @@
 
 # ------------------------------------------------------------------------------
 # The publication's base URL, i.e. 'https://www.my-publication.org'
-url: 'http://localhost:8080'
+url: 'https://geealbers.github.io/test-rc5'
 
 # ------------------------------------------------------------------------------
 # Title & Description
